Beautified Index file and git ignored text files.

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
               <span class="rig-text">Bagel
                 <br>
                 <i class="fas fa-chevron-circle-right"></i>
-            </span>
+              </span>
             </a>
           </li>
           <li>
@@ -170,7 +170,7 @@
       </div>
     </section>
 
-  <hr class="m-0">
+    <hr class="m-0">
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="education">
       <div class="w-100">
@@ -297,7 +297,7 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">Fokoya - Tel Aviv, IL</h3>
-            <div class="subheading mb-3">Intern in Project Management and Advertising	r</div>
+            <div class="subheading mb-3">Intern in Project Management and Advertising r</div>
             <ul class="fa-ul mb-0" style="list-style-type:disc;">
               <li>
                 Developed and marketed the Cryptocurrency Community Database, a forum-like system created in Google Sheets
@@ -471,12 +471,14 @@
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
       <div class="w-100">
         <h2 class="mb-5">Interests</h2>
-        <p>I’m vice president of UChicago’s Engineering Society, a student organization that serves as the engineering hub for UChicago’s undergrad student body. We host educational workshops, guest speakers, hackathons and weekly project nights where members
+        <p>I’m vice president of UChicago’s Engineering Society, a student organization that serves as the engineering hub for UChicago’s undergrad student body. We host educational workshops, guest speakers, hackathons and weekly project nights
+          where members
           work on a variety of long and short - term projects. Some of our past projects have included robotic arms, quadcopters, acoustic levitators and solar-powered hats.</p>
         <div class="subheading mb-3">Recent Reads</div>
         <ul class="fa-ul mb-0">
           <li>
-            <i class="fa-li fa fa-book"></i> <i>Algorithms to Live By</i> by Brian Christian and Tom Griffiths. 10/10 - Exceptional Book that cleverly applies Computer Science intution to real-world problems and in doing so, applies real-world intution to the study of computer science.
+            <i class="fa-li fa fa-book"></i> <i>Algorithms to Live By</i> by Brian Christian and Tom Griffiths. 10/10 - Exceptional Book that cleverly applies Computer Science intution to real-world problems and in doing so, applies real-world
+            intution to the study of computer science.
           </li>
           <li>
             <i class="fa-li fa fa-book"></i> <i>The Wasp That Brainwashed the Caterpillar</i> by Matt Simon. (Currently Reading)
