--- a/index.html
+++ b/index.html
@@ -109,6 +109,26 @@
             <a class="rig-cell" href="html/portfolio.html#CCD">
               <img class="rig-img" src="img/CCD/CCD 4-3.png">
               <span class="rig-overlay"></span>
+              <span class="rig-text">Nature Photography: California
+                <br>
+                <i class="fas fa-chevron-circle-right"></i>
+              </span>
+            </a>
+          </li>
+          <li>
+            <a class="rig-cell" href="html/portfolio.html#CCD">
+              <img class="rig-img" src="img/CCD/CCD 4-3.png">
+              <span class="rig-overlay"></span>
+              <span class="rig-text">Boids Simulator
+                <br>
+                <i class="fas fa-chevron-circle-right"></i>
+              </span>
+            </a>
+          </li>
+          <li>
+            <a class="rig-cell" href="html/portfolio.html#CCD">
+              <img class="rig-img" src="img/CCD/CCD 4-3.png">
+              <span class="rig-overlay"></span>
               <span class="rig-text">The CCD
                 <br>
                 <i class="fas fa-chevron-circle-right"></i>
@@ -116,7 +136,7 @@
             </a>
           </li>
           <li>
-            <a class="rig-cell" href="html/portfolio.html#chiventure">
+            <a class="rig-cell" href="html/portfolio2.html#chiventure">
               <img class="rig-img" src="img/Chiventure/Banner.png">
               <span class="rig-overlay"></span>
               <span class="rig-text">Chiventure
@@ -126,7 +146,7 @@
             </a>
           </li>
           <li>
-            <a class="rig-cell" href="html/portfolio.html#shakedlab">
+            <a class="rig-cell" href="html/portfolio2.html#shakedlab">
               <img class="rig-img" src="img/Shaked/Home 4-3.jpg">
               <span class="rig-overlay"></span>
               <span class="rig-text">Shaked Lab Website
@@ -136,7 +156,7 @@
             </a>
           </li>
           <li>
-            <a class="rig-cell" href="html/portfolio.html#Hackathon19">
+            <a class="rig-cell" href="html/portfolio2.html#Hackathon19">
               <img class="rig-img" src="img/Hackathon/Board.jpg">
               <span class="rig-overlay"></span>
               <span class="rig-text">Hackathon 2019
@@ -146,7 +166,7 @@
             </a>
           </li>
           <li>
-            <a class="rig-cell" href="html/portfolio.html#bagel">
+            <a class="rig-cell" href="html/portfolio3.html#bagel">
               <img class="rig-img" src="img/Bagel/Bagel 4-3.png">
               <span class="rig-overlay">
               </span>
@@ -157,10 +177,20 @@
             </a>
           </li>
           <li>
-            <a class="rig-cell" href="html/portfolio.html#go">
+            <a class="rig-cell" href="html/portfolio3.html#go">
               <img class="rig-img" src="img/Go/go 4-3.png">
               <span class="rig-overlay"></span>
               <span class="rig-text">Go
+                <br>
+                <i class="fas fa-chevron-circle-right"></i>
+              </span>
+            </a>
+          </li>
+          <li>
+            <a class="rig-cell" href="html/portfolio3.html#abstract">
+              <img class="rig-img" src="img/Abstract Photography/Drain Photo.JPG">
+              <span class="rig-overlay"></span>
+              <span class="rig-text">Abstract Photography
                 <br>
                 <i class="fas fa-chevron-circle-right"></i>
               </span>
