Added Cali Nature Gallery, Update Image Gallery Format

--- a/html/portfolio2.html
+++ b/html/portfolio2.html
@@ -157,17 +157,17 @@
 
           <!-- Thumbnail images -->
           <div class="row-gal">
-            <div class="column-gal">
+            <div class="column-gal-small">
               <img class="demo cursor" src="..\img\Shaked\Home.PNG" style="width:100%" onclick="currentSlide(1)" alt="Home Page">
             </div>
-            <div class="column-gal">
-              <img class="demo cursor" src="..\img\Shaked\Lab Members.PNG" style="width:100%" onclick="currentSlide(2)" alt="Lab Members">
+            <div class="column-gal-small">
+              <img class="demo cursor" src="..\img\Shaked\Lab Members.PNG" style="width:100%" onclick="currentSlide(2)" alt="Lab Members Page">
             </div>
-            <div class="column-gal">
-              <img class="demo cursor" src="..\img\Shaked\Research.PNG" style="width:100%" onclick="currentSlide(3)" alt="Research">
+            <div class="column-gal-small">
+              <img class="demo cursor" src="..\img\Shaked\Research.PNG" style="width:100%" onclick="currentSlide(3)" alt="Research Page">
             </div>
-            <div class="column-gal">
-              <img class="demo cursor" src="..\img\Shaked\Contact.PNG" style="width:100%" onclick="currentSlide(4)" alt="Contact Us">
+            <div class="column-gal-small">
+              <img class="demo cursor" src="..\img\Shaked\Contact.PNG" style="width:100%" onclick="currentSlide(4)" alt="Contact Us Page">
             </div>
           </div>
         </div>
