--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
         <h2 class="mb-5">Portfolio</h2>
         <ul id="rig">
           <li>
-            <a class="rig-cell" href="html/portfolio.html#CCD">
-              <img class="rig-img" src="img/CCD/CCD 4-3.png">
+            <a class="rig-cell" href="html/portfolio.html#cali">
+              <img class="rig-img" src="img\Nature Photography\Cali 2019\Squirrel 4-3.jpg">
               <span class="rig-overlay"></span>
               <span class="rig-text">Nature Photography: California
                 <br>
@@ -188,7 +188,7 @@
           </li>
           <li>
             <a class="rig-cell" href="html/portfolio3.html#abstract">
-              <img class="rig-img" src="img/Abstract Photography/Drain Photo.JPG">
+              <img class="rig-img" src="img\Abstract Photography\Drain Photo 4-3.jpg">
               <span class="rig-overlay"></span>
               <span class="rig-text">Abstract Photography
                 <br>
