Uploaded ES Logos and Prepared the basics of the ES section of portfolio.

--- a/index.html
+++ b/index.html
@@ -116,10 +116,10 @@
             </a>
           </li>
           <li>
-            <a class="rig-cell" href="html/portfolio.html#CCD">
-              <img class="rig-img" src="img/CCD/CCD 4-3.png">
+            <a class="rig-cell" href="html/portfolio.html#es">
+              <img class="rig-img" src="img\Engineering Society\Engineering Department Logo 4-3-02.png">
               <span class="rig-overlay"></span>
-              <span class="rig-text">Boids Simulator
+              <span class="rig-text">UChicago Engineering Society
                 <br>
                 <i class="fas fa-chevron-circle-right"></i>
               </span>
