--- a/html/portfolio.html
+++ b/html/portfolio.html
@@ -169,80 +169,18 @@
         <h2 class="mb-5">The University of Chicago Engineering Society</h2>
         <p>I serve as the Vice President and Treasurer of the The University of Chicago Engineering Society. The Engineering Society is a group of students from a variety of backgrounds and majors who are passionate about Engineering.  We host educational workshops, guest speakers, networking events, community service fundraisers and weekly project nights all designed to help University of Chicago Students and the surrounding communities engage with Engineering in a fun and educational way.
         </p>
-        <p>During our project nights, we design and build things across a wide variety of engineering disciplines. Our past projects have included, robotic arm, acoustic levitators, 3D printers and rockets.
+        <img class="banner-img" src="..\img\Engineering Society\Engineering Society Brand Guidelines-01.png"></img>
+        <p>During our project nights, we design and build things across a wide variety of engineering disciplines. Our past projects have included a robotic arm, an acoustic levitators, a 3D printer and rockets. We are currently working on a robot that assembles lego structures.
         </p>
-        <!-- Container for the image gallery -->
-        <div class="container">
-
-          <!-- Full-width images with number text -->
-
-          <div class="mySlides">
-            <div class="numbertext">1 / 7</div>
-            <img src="..\img\Nature Photography\Cali 2019\Squirrel_SD.jpg" style="width:100%">
+        <div class="row">
+          <div class="column_quarter">
+            <!--<img class="col-img" src="..\img\Chiventure\Logo.png">-->
+            <img src="..\img\Engineering Society\ES Banner Low Res-01-min.png" class="col-img">
           </div>
-
-          <div class="mySlides">
-            <div class="numbertext">2 / 7</div>
-            <img src="..\img\Nature Photography\Cali 2019\Pelican.jpg" style="width:100%">
-          </div>
-
-          <div class="mySlides">
-            <div class="numbertext">3 / 7</div>
-            <img src="..\img\Nature Photography\Cali 2019\Seagull.jpg" style="width:100%">
-          </div>
-
-          <div class="mySlides">
-            <div class="numbertext">4 / 7</div>
-            <img src="..\img\Nature Photography\Cali 2019\Heron.jpg" style="width:100%">
-          </div>
-
-          <div class="mySlides">
-            <div class="numbertext">5 / 7</div>
-            <img src="..\img\Nature Photography\Cali 2019\Sea Lions.jpg" style="width:100%">
-          </div>
-
-          <div class="mySlides">
-            <div class="numbertext">6 / 7</div>
-            <img src="..\img\Nature Photography\Cali 2019\Seals2.jpg" style="width:100%">
-          </div>
-
-          <div class="mySlides">
-            <div class="numbertext">7 / 7</div>
-            <img src="..\img\Nature Photography\Cali 2019\Yosemite.jpg" style="width:100%">
-          </div>
-
-          <!-- Next and previous buttons -->
-          <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-          <a class="next" onclick="plusSlides(1)">&#10095;</a>
-
-          <!-- Image text -->
-          <div class="caption-container">
-            <p id="caption"></p>
-          </div>
-
-          <!-- Thumbnail images -->
-          <div class="row-gal">
-            <div class="column-gal-small">
-              <img class="demo cursor" src="..\img\Nature Photography\Cali 2019\Squirrel_SD.jpg" style="width:100%" onclick="currentSlide(1)" alt="California Ground Squirrel - San Diego, CA">
-            </div>
-            <div class="column-gal-small">
-              <img class="demo cursor" src="..\img\Nature Photography\Cali 2019\Pelican.jpg" style="width:100%" onclick="currentSlide(2)" alt="American White Pelican - San Diego, CA">
-            </div>
-            <div class="column-gal-small">
-              <img class="demo cursor" src="..\img\Nature Photography\Cali 2019\Seagull.jpg" style="width:100%" onclick="currentSlide(3)" alt="Herring Gull - San Diego, CA">
-            </div>
-            <div class="column-gal-small">
-              <img class="demo cursor" src="..\img\Nature Photography\Cali 2019\Heron.jpg" style="width:100%" onclick="currentSlide(4)" alt="Blue Heron, Yosemite Ntl. Park">
-            </div>
-            <div class="column-gal-small">
-              <img class="demo cursor" src="..\img\Nature Photography\Cali 2019\Sea Lions.jpg" style="width:100%" onclick="currentSlide(5)" alt="Sea Lions and Cormorants - San Diego, CA">
-            </div>
-            <div class="column-gal-small">
-              <img class="demo cursor" src="..\img\Nature Photography\Cali 2019\Seals2.jpg" style="width:100%" onclick="currentSlide(6)" alt="Pacific Harbor Seals - San Diego, CA">
-            </div>
-            <div class="column-gal-small">
-              <img class="demo cursor" src="..\img\Nature Photography\Cali 2019\Yosemite.jpg" style="width:100%" onclick="currentSlide(7)" alt="Yosemite Valley, Yosemite Ntl. Park">
-            </div>
+          <div class="column_quarter_flex">
+            <!--<img class="col-img" src="..\img\Chiventure\map-view.jpg">-->
+            <p>In addition to the fundraising work and engineering projects that I lead as Vice President and Treasurer, I also have led a rebranding of the club's graphic design and advertising. Pictured above is a sample of the style guide I created for the organization's print and digital communications. Additionally, I've designed standing banners for recruitement events (left), flyers, and social media templaes for the club to use going forward. I am currently working on club merchandise and spray-painting stencils. These initiatives have helped us attract dozens of new members and event attendees this year.
+            </p>
           </div>
         </div>
       </div>
