--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   <!-- Custom styles for this template -->
   <link href="css/resume.css" rel="stylesheet">
   <link href="css/image_grid.css" rel="stylesheet">
+  <link href="css/icon_photo.css" rel="stylesheet">
 
 </head>
 
@@ -41,6 +42,9 @@
       <ul class="navbar-nav">
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#about">About</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#projects">Projects</a>
         </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a>
@@ -77,7 +81,7 @@
         <div class="subheading mb-5">
           <a href="mailto:sshatzkin@uchicago.edu">sshatzkin@uchicago.edu</a>
         </div>
-        <p class="lead mb-5">A computer science student at The University of Chicago with a minor in biology. I’m interested in exploring the intersections between technology, entertainment, education and research in new and interesting ways.</p>
+        <p class="lead mb-5">A computer science major at The University of Chicago with a minor in biology. I’m interested in exploring the intersections between technology, entertainment, education and research in new and exciting ways.</p>
         <div class="social-icons">
           <a href="https://www.linkedin.com/in/samshatzkin/">
             <i class="fab fa-linkedin-in"></i>
@@ -96,6 +100,92 @@
         <h3>
           Scroll Down For <a class="js-scroll-trigger" href="#portfolio">Portfolio</a>
         </h3>
+      </div>
+    </section>
+
+    <hr class="m-0">
+
+    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="projects">
+      <div class="w-100">
+        <h2 class="mb-5">Ongoing Projects</h2>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">CharacterSearch, Paleontology Department at the University of Chicago</h3>
+            <div class="subheading mb-3">Fullstack Web Developer</div>
+            <ul class="fa-ul mb-0" style="list-style-type:disc;">
+              <li>
+                Developing (LAMP Stack) a unique software tool for conducting character-based cladistic analysis and character databasing
+              </li>
+              <li>
+                Currently in prototyping phase and will soon transition to construction of web application version and database for character information
+              </li>
+            </ul>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">June 2019 - Present</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">
+              <img src="img\EarlyBird\Early Bird Logo_App Icon Main - 1024x1024.png" class="icon_photo"> &nbsp EarlyBird
+            </h3>
+            <div class="subheading mb-3">Co-Founder</div>
+            <ul class="fa-ul mb-0" style="list-style-type:disc;">
+              <li>
+                Working with two teamates to develop a startup based on a mobile application
+              </li>
+              <li>
+                Currently beginning app development and applying to entrepeneurship competitions
+              </li>
+            </ul>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">January 2020 - Present</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Lego-Building Robot, Engineering Society at UChicago</h3>
+            <div class="subheading mb-3">Project Lead</div>
+            <ul class="fa-ul mb-0" style="list-style-type:disc;">
+              <li>
+                Working with a team of Engineering Society members to build and program a robot that will construct sculptures out of legos
+              </li>
+              <li>
+                Currently applying software prototypes to temporary robot and applying for project grants
+              </li>
+              <li>
+                Working with artistic advisor from the MADD center to explore the artistic implications of the project
+              </li>
+            </ul>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">September 2019 - Present</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Old Cow</h3>
+            <div class="subheading mb-3">Graphic Design, Web Developer</div>
+            <ul class="fa-ul mb-0" style="list-style-type:disc;">
+              <li>
+                Working with startup Old Cow to develop their online presence through web development and graphic design
+              </li>
+              <li>
+                Currently working with Old Cow to design a product line of apparel, accessories and gift items
+              </li>
+            </ul>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">June 2019 - Present</span>
+          </div>
+        </div>
+
       </div>
     </section>
 
@@ -197,10 +287,13 @@
             </a>
           </li>
         </ul>
+
       </div>
     </section>
 
     <hr class="m-0">
+
+
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="education">
       <div class="w-100">
@@ -208,12 +301,17 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">University of Chicago - Chicago, IL</h3>
+            <h3 class="mb-0">
+              <img src="img\Education Images\UChicago Seal.png" class="icon_photo"> &nbsp
+              University of Chicago - Chicago, IL</h3>
             <div class="subheading">Bachelor of Science</div>
             <div>Computer Science</div>
             <p>GPA: 3.95</p>
             <div class="subheading mb-3">Representative Courses</div>
             <ul class="fa-ul mb-0">
+              <li>
+                <i class="fa-li fa fa-laptop-code"></i> CMSC 29512 - Entrepeneurship in Technology (MS Class)
+              </li>
               <li>
                 <i class="fa-li fa fa-laptop-code"></i> CMSC 21800 - Data Science for Compuer Scientists
               </li>
@@ -238,7 +336,9 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Big Idea Gap Year - Be'er Sheva, Israel</h3>
+            <h3 class="mb-0">
+              <img src="img\Education Images\Big Idea Logo.jpg" class="icon_photo"> &nbsp
+              Big Idea Gap Year - Be'er Sheva, Israel</h3>
             <div> Training Course for Web and Mobile Programmers. Also participated in a one month internship at the Center for Development and innovation in Be’er Sheva’s high-tech park.
             </div>
           </div>
@@ -249,7 +349,9 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
-            <h3 class="mb-0">Bronx High School of Science - New York, NY</h3>
+            <h3 class="mb-0">
+              <img src="img\Education Images\BxSci_Logo_New.jpg" class="icon_photo"> &nbsp
+              Bronx High School of Science - New York, NY</h3>
             <div> Specialized Science High School</div>
             <p></p>
           </div>
