--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet">
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
-  <link href="vendor/font-mfizz-2.4.1/font-mfizz.css" rel="stylesheet">
+  <link href="css/font-mfizz-2.4.1/font-mfizz.css" rel="stylesheet">
 
   <!-- Custom styles for this template -->
   <link href="css/resume.css" rel="stylesheet">
@@ -559,7 +559,7 @@
         <div class="subheading mb-3">Tools</div>
         <ul class="list-inline dev-icons mb-0">
           <li class="list-inline-item">
-            <i class="fab icon-unity"></i>
+            <i class="icon-unity"></i>
           </li>
           <li class="list-inline-item">
             <i class="fab icon-git"></i>
