Updated Skills and Languages

--- a/index.html
+++ b/index.html
@@ -310,13 +310,19 @@
             <div class="subheading mb-3">Representative Courses</div>
             <ul class="fa-ul mb-0">
               <li>
-                <i class="fa-li fa fa-laptop-code"></i> CMSC 29512 - Entrepeneurship in Technology (MS Class)
+                <i class="fa-li fa fa-laptop-code"></i> CMSC 29512 - Entrepeneurship in Technology (MS Course)
               </li>
               <li>
                 <i class="fa-li fa fa-laptop-code"></i> CMSC 21800 - Data Science for Compuer Scientists
               </li>
               <li>
+                <i class="fa-li fa fa-laptop-code"></i> CMSC 23900 - Data Visualization
+              </li>
+              <li>
                 <i class="fa-li fa fa-laptop-code"></i> CMSC 22000 - Software Development
+              </li>
+              <li>
+                <i class="fa-li fa fa-dna"></i> BIOS 26120 - An Introduction to Bioinformatics and Proteomics
               </li>
               <li>
                 <i class="fa-li fa fa-dna"></i> BIOS 20151 - Quantitative Modeling in Biology
@@ -534,13 +540,16 @@
         <div class="subheading mb-3">Programming Languages</div>
         <ul class="list-inline dev-icons mb-0">
           <li class="list-inline-item">
-            <i class="fab fa-html5"></i>
+            <i class="fab icon-html"></i>
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-css3-alt"></i>
+            <i class="fab icon-css"></i>
           </li>
           <li class="list-inline-item">
             <i class="fab fa-js-square"></i>
+          </li>
+          <li class="list-inline-item">
+            <i class="fab icon-reactjs"></i>
           </li>
           <li class="list-inline-item">
             <i class="fab icon-c"></i>
@@ -559,7 +568,7 @@
         <div class="subheading mb-3">Tools</div>
         <ul class="list-inline dev-icons mb-0">
           <li class="list-inline-item">
-            <i class="icon-unity"></i>
+            <i class="fab icon-unity"></i>
           </li>
           <li class="list-inline-item">
             <i class="fab icon-git"></i>
@@ -574,6 +583,9 @@
             <i class="fab fa-chrome"></i>
           </li>
           <li class="list-inline-item">
+            <i class="fab icon-aws"></i>
+          </li>
+          <li class="list-inline-item">
             <i class="fab icon-google-developers"></i>
           </li>
           <li class="list-inline-item">
@@ -584,9 +596,9 @@
         <div class="subheading mb-3">Additional Languages, Tools and Skills</div>
         <ul class="fa-ul mb-0">
           <li>
-            <i class="fa-li fa fa-check"></i> Typed Racket</li>
-          <li>
             <i class="fa-li fa fa-check"></i> Photography &amp; Videography</li>
+          <li>
+            <i class="fa-li fa fa-check"></i> Soldering </li>
           <li>
             <i class="fa-li fa fa-check"></i> Laser Cutting </li>
           <li>
