Updated Recent reads and interests

--- a/index.html
+++ b/index.html
@@ -614,18 +614,26 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
       <div class="w-100">
-        <h2 class="mb-5">Interests</h2>
-        <p>I’m vice president of UChicago’s Engineering Society, a student organization that serves as the engineering hub for UChicago’s undergrad student body. We host educational workshops, guest speakers, hackathons and weekly project nights
+        <h2 class="mb-5">Extracirricular Interests</h2>
+        <p>
+          When I'm not working, I enjoy reading, playing board games with my friends, tending my garden, or getting out into nature to take some pictures.
+        </p>
+        <p>
+          At school, I’m also vice president of UChicago’s Engineering Society, a student organization that serves as the engineering hub for UChicago’s undergrad student body. We host educational workshops, guest speakers, hackathons and weekly project nights
           where members
-          work on a variety of long and short - term projects. Some of our past projects have included robotic arms, quadcopters, acoustic levitators and solar-powered hats.</p>
+          work on a variety of long and short - term projects. Some of our past projects have included robotic arms, quadcopters, acoustic levitators and solar-powered hats.
+        </p>
         <div class="subheading mb-3">Recent Reads</div>
         <ul class="fa-ul mb-0">
           <li>
-            <i class="fa-li fa fa-book"></i> <i>Algorithms to Live By</i> by Brian Christian and Tom Griffiths. 10/10 - Exceptional Book that cleverly applies Computer Science intution to real-world problems and in doing so, applies real-world
+            <i class="fa-li fa fa-book"></i> <i>Invisible Planets: Contemporary Chinese Science Fiction in Translation</i> edited by Ken Liu. (Currently Reading)
+          </li>
+          <li>
+            <i class="fa-li fa fa-book"></i> <i>Algorithms to Live By</i> by Brian Christian and Tom Griffiths. - Exceptional Book that cleverly applies Computer Science intution to real-world problems and in doing so, applies real-world
             intution to the study of computer science.
           </li>
           <li>
-            <i class="fa-li fa fa-book"></i> <i>The Wasp That Brainwashed the Caterpillar</i> by Matt Simon. (Currently Reading)
+            <i class="fa-li fa fa-book"></i> <i>The Wasp That Brainwashed the Caterpillar</i> by Matt Simon. - A fun book that dives into the fun, fascinating, and feindish solutions that natural selection has given us to some of nature's toughest problems.
           </li>
         </ul>
       </div>
