Updated Linking to reflect 4th page of portfolio.

--- a/html/portfolio.html
+++ b/html/portfolio.html
@@ -74,6 +74,7 @@
       <a class="active" href="portfolio.html">1</a>
       <a href="portfolio2.html">2</a>
       <a href="portfolio3.html">3</a>
+      <a href="portfolio4.html">4</a>
       <a href="portfolio2.html">&raquo;</a>
     </div>
   </div>
@@ -241,6 +242,7 @@
       <a class="active" href="portfolio.html">1</a>
       <a href="portfolio2.html">2</a>
       <a href="portfolio3.html">3</a>
+      <a href="portfolio4.html">4</a>
       <a href="portfolio2.html">&raquo;</a>
     </div>
   </div>
