--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
         <h2 class="mb-5">Portfolio</h2>
         <ul id="rig">
           <li>
-            <a class="rig-cell" href="html/portfolio.html#cali">
+            <a class="rig-cell" href="html/portfolio2.html#cali">
               <img class="rig-img" src="img\Nature Photography\Cali 2019\Squirrel 4-3.jpg">
               <span class="rig-overlay"></span>
               <span class="rig-text">Nature Photography: California
@@ -206,7 +206,7 @@
             </a>
           </li>
           <li>
-            <a class="rig-cell" href="html/portfolio.html#es">
+            <a class="rig-cell" href="html/portfolio2.html#es">
               <img class="rig-img" src="img\Engineering Society\Engineering Department Logo 4-3-02.png">
               <span class="rig-overlay"></span>
               <span class="rig-text">UChicago Engineering Society
@@ -216,7 +216,7 @@
             </a>
           </li>
           <li>
-            <a class="rig-cell" href="html/portfolio.html#CCD">
+            <a class="rig-cell" href="html/portfolio2.html#CCD">
               <img class="rig-img" src="img/CCD/CCD 4-3.png">
               <span class="rig-overlay"></span>
               <span class="rig-text">The CCD
@@ -226,7 +226,7 @@
             </a>
           </li>
           <li>
-            <a class="rig-cell" href="html/portfolio2.html#chiventure">
+            <a class="rig-cell" href="html/portfolio3.html#chiventure">
               <img class="rig-img" src="img/Chiventure/Banner.png">
               <span class="rig-overlay"></span>
               <span class="rig-text">Chiventure
@@ -236,7 +236,7 @@
             </a>
           </li>
           <li>
-            <a class="rig-cell" href="html/portfolio2.html#shakedlab">
+            <a class="rig-cell" href="html/portfolio3.html#shakedlab">
               <img class="rig-img" src="img/Shaked/Home 4-3.jpg">
               <span class="rig-overlay"></span>
               <span class="rig-text">Shaked Lab Website
@@ -246,7 +246,7 @@
             </a>
           </li>
           <li>
-            <a class="rig-cell" href="html/portfolio2.html#Hackathon19">
+            <a class="rig-cell" href="html/portfolio3.html#Hackathon19">
               <img class="rig-img" src="img/Hackathon/Board.jpg">
               <span class="rig-overlay"></span>
               <span class="rig-text">Hackathon 2019
@@ -256,7 +256,7 @@
             </a>
           </li>
           <li>
-            <a class="rig-cell" href="html/portfolio3.html#bagel">
+            <a class="rig-cell" href="html/portfolio4.html#bagel">
               <img class="rig-img" src="img/Bagel/Bagel 4-3.png">
               <span class="rig-overlay">
               </span>
@@ -267,7 +267,7 @@
             </a>
           </li>
           <li>
-            <a class="rig-cell" href="html/portfolio3.html#go">
+            <a class="rig-cell" href="html/portfolio4.html#go">
               <img class="rig-img" src="img/Go/go 4-3.png">
               <span class="rig-overlay"></span>
               <span class="rig-text">Go
@@ -277,7 +277,7 @@
             </a>
           </li>
           <li>
-            <a class="rig-cell" href="html/portfolio3.html#abstract">
+            <a class="rig-cell" href="html/portfolio4.html#abstract">
               <img class="rig-img" src="img\Abstract Photography\Drain Photo 4-3.jpg">
               <span class="rig-overlay"></span>
               <span class="rig-text">Abstract Photography
