Updated experience and current projects sections

--- a/index.html
+++ b/index.html
@@ -121,14 +121,35 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">CharacterSearch, Paleontology Department at the University of Chicago</h3>
-            <div class="subheading mb-3">Fullstack Web Developer</div>
+            <h3 class="mb-0">Character Search, Paleontology Department at the UNiversity of Chicago - Chicago, IL</h3>
+            <div class="subheading mb-3">Lead Developer (React JS, AWS, GitHub)</div>
             <ul class="fa-ul mb-0" style="list-style-type:disc;">
               <li>
-                Developing (LAMP Stack) a unique software tool for conducting character-based cladistic analysis and character databasing
+                Developing web-based software tool and database for conducting cladistic analysis and storing character data
               </li>
               <li>
-                Currently in prototyping phase and will soon transition to construction of web application version and database for character information
+                Work with Paleontologist Paul Sereno to develop software to execute his novel cladistic analysis methodology
+              </li>
+            </ul>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">June 2019 - Present</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Old Cow - Baltimore, MD / Remote</h3>
+            <div class="subheading mb-3">Graphic Design and Web Development (Adobe Illustrator, WordPress)</div>
+            <ul class="fa-ul mb-0" style="list-style-type:disc;">
+              <li>
+                Currently working with Old Cow to design a product line of apparel, accessories and gift items
+              </li>
+              <li>
+                Create all of the company’s design materials, including logos, merchandise, social media images, and design guides
+              </li>
+              <li>
+                Develop the company website and manage the company’s IT administration
               </li>
             </ul>
           </div>
@@ -178,24 +199,6 @@
           </div>
         </div>
 
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="resume-content">
-            <h3 class="mb-0">Old Cow</h3>
-            <div class="subheading mb-3">Graphic Design, Web Developer</div>
-            <ul class="fa-ul mb-0" style="list-style-type:disc;">
-              <li>
-                Working with startup Old Cow to develop their online presence through web development and graphic design
-              </li>
-              <li>
-                Currently working with Old Cow to design a product line of apparel, accessories and gift items
-              </li>
-            </ul>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">June 2019 - Present</span>
-          </div>
-        </div>
-
       </div>
     </section>
 
@@ -205,6 +208,36 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h2>
         <ul id="rig">
+          <li>
+            <a class="rig-cell" href="html/portfolio.html#cali">
+              <img class="rig-img" src="img\Nature Photography\Cali 2019\Squirrel 4-3.jpg">
+              <span class="rig-overlay"></span>
+              <span class="rig-text">Nature Photography: California
+                <br>
+                <i class="fas fa-chevron-circle-right"></i>
+              </span>
+            </a>
+          </li>
+          <li>
+            <a class="rig-cell" href="html/portfolio.html#es">
+              <img class="rig-img" src="img\Engineering Society\Engineering Department Logo 4-3-02.png">
+              <span class="rig-overlay"></span>
+              <span class="rig-text">UChicago Engineering Society
+                <br>
+                <i class="fas fa-chevron-circle-right"></i>
+              </span>
+            </a>
+          </li>
+          <li>
+            <a class="rig-cell" href="html/portfolio.html#CCD">
+              <img class="rig-img" src="img/CCD/CCD 4-3.png">
+              <span class="rig-overlay"></span>
+              <span class="rig-text">The CCD
+                <br>
+                <i class="fas fa-chevron-circle-right"></i>
+              </span>
+            </a>
+          </li>
           <li>
             <a class="rig-cell" href="html/portfolio2.html#cali">
               <img class="rig-img" src="img\Nature Photography\Cali 2019\Squirrel 4-3.jpg">
@@ -384,6 +417,42 @@
     <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="experience">
       <div class="w-100">
         <h2 class="mb-5">Experience</h2>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Character Search, Paleontology Department at the UNiversity of Chicago - Chicago, IL</h3>
+            <div class="subheading mb-3">Lead Developer (React JS, AWS, GitHub)</div>
+            <ul class="fa-ul mb-0" style="list-style-type:disc;">
+              <li>
+                Develop web-based software tool and database for conducting cladistic analysis and storing character data
+              </li>
+              <li>
+                Work with Paleontologist Paul Sereno to develop software to execute his novel cladistic analysis methodology
+              </li>
+            </ul>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">June 2019 - Present</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Old Cow - Baltimore, MD / Remote</h3>
+            <div class="subheading mb-3">Graphic Design and Web Development (Adobe Illustrator, WordPress)</div>
+            <ul class="fa-ul mb-0" style="list-style-type:disc;">
+              <li>
+                Create all of the company’s design materials, including logos, merchandise, social media images, and design guides
+              </li>
+              <li>
+                Develop the company website and manage the company’s IT administration
+              </li>
+            </ul>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">June 2019 - Present</span>
+          </div>
+        </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
