Added Baltimore Photography Section

--- a/index.html
+++ b/index.html
@@ -209,10 +209,10 @@
         <h2 class="mb-5">Portfolio</h2>
         <ul id="rig">
           <li>
-            <a class="rig-cell" href="html/portfolio.html#cali">
-              <img class="rig-img" src="img\Nature Photography\Cali 2019\Squirrel 4-3.jpg">
+            <a class="rig-cell" href="html/portfolio.html#balt">
+              <img class="rig-img" src="img\Nature Photography\Baltimore 2020\Owl_4-3.jpg">
               <span class="rig-overlay"></span>
-              <span class="rig-text">Nature Photography: California
+              <span class="rig-text">Nature Photography: Quarentine 2020
                 <br>
                 <i class="fas fa-chevron-circle-right"></i>
               </span>
