--- a/html/portfolio.html
+++ b/html/portfolio.html
@@ -55,7 +55,7 @@
           <a class="nav-link js-scroll-trigger" href="../index.html#portfolio">Return</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#cali">Photography: California</a>
+          <a class="nav-link js-scroll-trigger" href="#balt">Photography: Quarentine</a>
         </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#es">UChicago Engineering Society</a>
@@ -90,10 +90,10 @@
 
   <div class="container-fluid p-0">
 
-    <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="cali">
+    <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="balt">
       <div class="w-100">
-        <h2 class="mb-5">Nature Photography: California 2019</h2>
-        <p>I shot all of the images below on a trip to California this summer on a Nikon D5100. I shot wildlife and landscape photos in urban areas and National Parks.
+        <h2 class="mb-5">Nature Photography: Quarentine Summer 2020</h2>
+        <p>I shot all of the images below on a Nikon D5100 during my summer in quarentine near Baltimore, Maryland. I spent a lot of my time at home walking around the neighborhood and I grew to greatly appreciate my local natural environment during this period of isolation.
         </p>
         <!-- Container for the image gallery -->
         <div class="container">
@@ -101,39 +101,46 @@
           <!-- Full-width images with number text -->
 
           <div class="mySlides">
-            <div class="numbertext">1 / 7</div>
-            <img src="..\img\Nature Photography\Cali 2019\Squirrel_SD.jpg" style="width:100%">
+            <div class="numbertext">1 / 8</div>
+            <img src="..\img\Nature Photography\Baltimore 2020\Owl.png" style="width:100%">
           </div>
 
           <div class="mySlides">
-            <div class="numbertext">2 / 7</div>
-            <img src="..\img\Nature Photography\Cali 2019\Pelican.jpg" style="width:100%">
+            <div class="numbertext">2 / 8</div>
+            <img src="..\img\Nature Photography\Baltimore 2020\Frog Petals.jpg" style="width:100%">
           </div>
 
           <div class="mySlides">
-            <div class="numbertext">3 / 7</div>
-            <img src="..\img\Nature Photography\Cali 2019\Seagull.jpg" style="width:100%">
+            <div class="numbertext">3 / 8</div>
+            <img src="..\img\Nature Photography\Baltimore 2020\Frog.jpg" style="width:100%">
           </div>
 
           <div class="mySlides">
-            <div class="numbertext">4 / 7</div>
-            <img src="..\img\Nature Photography\Cali 2019\Heron.jpg" style="width:100%">
+            <div class="numbertext">4 / 8</div>
+            <img src="..\img\Nature Photography\Baltimore 2020\Flower.jpg" style="width:100%">
           </div>
 
           <div class="mySlides">
-            <div class="numbertext">5 / 7</div>
-            <img src="..\img\Nature Photography\Cali 2019\Sea Lions.jpg" style="width:100%">
+            <div class="numbertext">5 / 8</div>
+            <img src="..\img\Nature Photography\Baltimore 2020\Pheasant.jpg" style="width:100%">
           </div>
 
           <div class="mySlides">
-            <div class="numbertext">6 / 7</div>
-            <img src="..\img\Nature Photography\Cali 2019\Seals2.jpg" style="width:100%">
+            <div class="numbertext">6 / 8</div>
+            <img src="..\img\Nature Photography\Baltimore 2020\Groundhog.jpg" style="width:100%">
           </div>
 
           <div class="mySlides">
-            <div class="numbertext">7 / 7</div>
-            <img src="..\img\Nature Photography\Cali 2019\Yosemite.jpg" style="width:100%">
+            <div class="numbertext">7 / 8</div>
+            <img src="..\img\Nature Photography\Baltimore 2020\Blue Jay.jpg" style="width:100%">
           </div>
+
+          <div class="mySlides">
+            <div class="numbertext">8 / 8</div>
+            <img src="..\img\Nature Photography\Baltimore 2020\Deer.png" style="width:100%">
+          </div>
+
+          
 
           <!-- Next and previous buttons -->
           <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
@@ -147,26 +154,30 @@
           <!-- Thumbnail images -->
           <div class="row-gal">
             <div class="column-gal-small">
-              <img class="demo cursor" src="..\img\Nature Photography\Cali 2019\Squirrel_SD.jpg" style="width:100%" onclick="currentSlide(1)" alt="California Ground Squirrel - San Diego, CA">
+              <img class="demo cursor" src="..\img\Nature Photography\Baltimore 2020\Owl.png" style="width:100%" onclick="currentSlide(1)" alt="Barred Owl - Baltimore, MD">
             </div>
             <div class="column-gal-small">
-              <img class="demo cursor" src="..\img\Nature Photography\Cali 2019\Pelican.jpg" style="width:100%" onclick="currentSlide(2)" alt="American White Pelican - San Diego, CA">
+              <img class="demo cursor" src="..\img\Nature Photography\Baltimore 2020\Frog Petals.jpg" style="width:100%" onclick="currentSlide(2)" alt="American Bullfrog - Baltimore, MD">
             </div>
             <div class="column-gal-small">
-              <img class="demo cursor" src="..\img\Nature Photography\Cali 2019\Seagull.jpg" style="width:100%" onclick="currentSlide(3)" alt="Herring Gull - San Diego, CA">
+              <img class="demo cursor" src="..\img\Nature Photography\Baltimore 2020\Frog.jpg" style="width:100%" onclick="currentSlide(3)" alt="American Bullfrog - Baltimore, MD">
             </div>
             <div class="column-gal-small">
-              <img class="demo cursor" src="..\img\Nature Photography\Cali 2019\Heron.jpg" style="width:100%" onclick="currentSlide(4)" alt="Blue Heron, Yosemite Ntl. Park">
+              <img class="demo cursor" src="..\img\Nature Photography\Baltimore 2020\Flower.jpg" style="width:100%" onclick="currentSlide(4)" alt="Weeping Cherry Tree - Baltimore, MD">
             </div>
             <div class="column-gal-small">
-              <img class="demo cursor" src="..\img\Nature Photography\Cali 2019\Sea Lions.jpg" style="width:100%" onclick="currentSlide(5)" alt="Sea Lions and Cormorants - San Diego, CA">
+              <img class="demo cursor" src="..\img\Nature Photography\Baltimore 2020\Pheasant.jpg" style="width:100%" onclick="currentSlide(5)" alt="Ring-Necked Pheasant - Baltimore, MD">
             </div>
             <div class="column-gal-small">
-              <img class="demo cursor" src="..\img\Nature Photography\Cali 2019\Seals2.jpg" style="width:100%" onclick="currentSlide(6)" alt="Pacific Harbor Seals - San Diego, CA">
+              <img class="demo cursor" src="..\img\Nature Photography\Baltimore 2020\Groundhog.jpg" style="width:100%" onclick="currentSlide(6)" alt="Groundhog - Baltimore, MD">
             </div>
             <div class="column-gal-small">
-              <img class="demo cursor" src="..\img\Nature Photography\Cali 2019\Yosemite.jpg" style="width:100%" onclick="currentSlide(7)" alt="Yosemite Valley, Yosemite Ntl. Park">
+              <img class="demo cursor" src="..\img\Nature Photography\Baltimore 2020\Blue Jay.jpg" style="width:100%" onclick="currentSlide(7)" alt="Blue Jay - Baltimore, MD">
             </div>
+            <div class="column-gal-small">
+              <img class="demo cursor" src="..\img\Nature Photography\Baltimore 2020\Deer.png" style="width:100%" onclick="currentSlide(8)" alt="White-tailed Deer - Baltimore, MD">
+            </div>
+            
           </div>
         </div>
       </div>
