Added EarlyBird to portfolio

--- a/html/portfolio.html
+++ b/html/portfolio.html
@@ -31,6 +31,7 @@
   <!-- Custom styles for this template -->
   <link href="../css/resume.css" rel="stylesheet">
   <link href="../css/portfolio.css" rel="stylesheet">
+  <link href="../css/icon_photo.css" rel="stylesheet">
 
   <!-- Pagination Style Sheet -->
   <link href="../css/pagination.css" rel="stylesheet">
@@ -55,13 +56,13 @@
           <a class="nav-link js-scroll-trigger" href="../index.html#portfolio">Return</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#EB">Early Bird</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#balt">Photography: Quarentine</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#es">UChicago Engineering Society</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#CCD">Cryptocurrency Community Database</a>
+          <a class="nav-link js-scroll-trigger" href="#hack2020">Hackathon 2020</a>
         </li>
         <li>
           <br>
@@ -89,6 +90,34 @@
   </div>
 
   <div class="container-fluid p-0">
+
+    <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="EB">
+      <div class="w-100">
+        <h2 class="mb-5">
+          <img src="..\img\EarlyBird\Early Bird Logo_App Icon Main - 1024x1024.png" class="header_icon_photo"> &nbsp Early Bird
+        </h2>
+        <img class="profile-img" src="..\img\EarlyBird\earlybird.gif"></img>
+        <p>In the winter of my second year at UChicago, I enrolled in Entrepeneurship in Technology, a Master's level course that accepts a handful of undergraduates each year.
+        </p>
+        <p>
+          In this class, we worked in teams to develop a startup from problem to product in 10 weeks.  
+        </p>
+        <h4>
+          Problem:
+        </h4>
+        <p>
+          Back in the pre-COVID world, people used to work in public spaces like libraries and coffee shops. However, this comes with the risk of arriving at a busy venue without available seating or sitting down only to find out that there are no outlets to charge your laptop or terrible internet speeds. After going through the hastle of finding a workspace that satisfies their needs, most people fall into a routine of frequenting the same places, often at the same times because it is difficult to break routine and find new workspaces. Current solutions such as Yelp and Google provide statistics for businesses, but those applications prioritize proximity in their search algorithm, not workspace-relevant features like noise level, public internet access, or how comfortable the seating is.
+        </p>
+        <h4>
+          Product:
+        </h4>
+        <p>
+          Early Bird is a community-driven web-application that helps students find ideal study spaces and remote workers identify new public spaces to work from. Aggregating user-reported data about seating availability, wifi status, and other relevant needs and preferences, Early Bird can provide users with personalized recommendations for the best workspaces that suit their needs. If your favorite spot is near capacity, we’ll help you find the next best thing by tailoring our search to your preferences. 
+        </p>
+      </div>
+    </section>
+
+    <hr class="m-0">
 
     <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="balt">
       <div class="w-100">
@@ -178,30 +207,6 @@
               <img class="demo cursor" src="..\img\Nature Photography\Baltimore 2020\Deer.png" style="width:100%" onclick="currentSlide(8)" alt="White-tailed Deer - Baltimore, MD">
             </div>
             
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <hr class="m-0">
-
-    <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="es">
-      <div class="w-100">
-        <h2 class="mb-5">The University of Chicago Engineering Society</h2>
-        <p>I serve as the Vice President and Treasurer of the The University of Chicago Engineering Society. The Engineering Society is a group of students from a variety of backgrounds and majors who are passionate about Engineering.  We host educational workshops, guest speakers, networking events, community service fundraisers and weekly project nights all designed to help University of Chicago Students and the surrounding communities engage with Engineering in a fun and educational way.
-        </p>
-        <img class="banner-img" src="..\img\Engineering Society\Engineering Society Brand Guidelines-01.png"></img>
-        <p>During our project nights, we design and build things across a wide variety of engineering disciplines. Our past projects have included a robotic arm, an acoustic levitators, a 3D printer and rockets. We are currently working on a robot that assembles lego structures.
-        </p>
-        <div class="row">
-          <div class="column_quarter">
-            <!--<img class="col-img" src="..\img\Chiventure\Logo.png">-->
-            <img src="..\img\Engineering Society\ES Banner Low Res-01-min.png" class="col-img">
-          </div>
-          <div class="column_quarter_flex">
-            <!--<img class="col-img" src="..\img\Chiventure\map-view.jpg">-->
-            <p>In addition to the fundraising work and engineering projects that I lead as Vice President and Treasurer, I also have led a rebranding of the club's graphic design and advertising. Pictured above is a sample of the style guide I created for the organization's print and digital communications. Additionally, I've designed standing banners for recruitement events (left), flyers, and social media templaes for the club to use going forward. I am currently working on club merchandise and spray-painting stencils. These initiatives have helped us attract dozens of new members and event attendees this year.
-            </p>
           </div>
         </div>
       </div>
