--- a/index.html
+++ b/index.html
@@ -209,6 +209,16 @@
         <h2 class="mb-5">Portfolio</h2>
         <ul id="rig">
           <li>
+            <a class="rig-cell" href="html/portfolio.html#EB">
+              <img class="rig-img" src="img\EarlyBird\4-3.png">
+              <span class="rig-overlay"></span>
+              <span class="rig-text">Early Bird
+                <br>
+                <i class="fas fa-chevron-circle-right"></i>
+              </span>
+            </a>
+          </li>
+          <li>
             <a class="rig-cell" href="html/portfolio.html#balt">
               <img class="rig-img" src="img\Nature Photography\Baltimore 2020\Owl_4-3.jpg">
               <span class="rig-overlay"></span>
@@ -219,20 +229,10 @@
             </a>
           </li>
           <li>
-            <a class="rig-cell" href="html/portfolio.html#es">
-              <img class="rig-img" src="img\Engineering Society\Engineering Department Logo 4-3-02.png">
-              <span class="rig-overlay"></span>
-              <span class="rig-text">UChicago Engineering Society
-                <br>
-                <i class="fas fa-chevron-circle-right"></i>
-              </span>
-            </a>
-          </li>
-          <li>
-            <a class="rig-cell" href="html/portfolio.html#CCD">
+            <a class="rig-cell" href="html/portfolio.html#hack2020">
               <img class="rig-img" src="img/CCD/CCD 4-3.png">
               <span class="rig-overlay"></span>
-              <span class="rig-text">The CCD
+              <span class="rig-text">Hackathon 2020
                 <br>
                 <i class="fas fa-chevron-circle-right"></i>
               </span>
