Added Security Incident Map to portfolio

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
           </li>
           <li>
             <a class="rig-cell" href="html/portfolio.html#hack2020">
-              <img class="rig-img" src="img/CCD/CCD 4-3.png">
+              <img class="rig-img" src="img\Hackathon\2020\4-3.png">
               <span class="rig-overlay"></span>
               <span class="rig-text">Hackathon 2020
                 <br>
