--- a/html/portfolio.html
+++ b/html/portfolio.html
@@ -11,11 +11,12 @@
   <title>Sam Shatzkin's Portfolio</title>
 
    <!-- Favicon -->
-   <link rel="apple-touch-icon" sizes="180x180" href="/img/favicons/apple-touch-icon.png">
-   <link rel="icon" type="image/png" sizes="32x32" href="/img/favicons/favicon-32x32.png">
-   <link rel="icon" type="image/png" sizes="16x16" href="/img/favicons/favicon-16x16.png">
-   <link rel="manifest" href="/img/favicons/site.webmanifest">
-   <link rel="mask-icon" href="/img/favicons/safari-pinned-tab.svg" color="#5bbad5">
+   <link rel="shortcut icon" type="image/x-icon" href="../img/favicons/favicon.ico">
+   <link rel="apple-touch-icon" sizes="180x180" href="../img/favicons/apple-touch-icon.png">
+   <link rel="icon" type="image/png" sizes="32x32" href="../img/favicons/favicon-32x32.png">
+   <link rel="icon" type="image/png" sizes="16x16" href="../img/favicons/favicon-16x16.png">
+   <link rel="manifest" href="../img/favicons/site.webmanifest">
+   <link rel="mask-icon" href="../img/favicons/safari-pinned-tab.svg" color="#5bbad5">
    <meta name="msapplication-TileColor" content="#2d89ef">
    <meta name="theme-color" content="#ffffff">
 
@@ -59,7 +60,7 @@
           <a class="nav-link js-scroll-trigger" href="#EB">Early Bird</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#balt">Photography: Quarentine</a>
+          <a class="nav-link js-scroll-trigger" href="#balt">Photography: Quarantine</a>
         </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#hack2020">Hackathon 2020</a>
@@ -121,8 +122,8 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="balt">
       <div class="w-100">
-        <h2 class="mb-5">Nature Photography: Quarentine Summer 2020</h2>
-        <p>I shot all of the images below on a Nikon D5100 during my summer in quarentine near Baltimore, Maryland. I spent a lot of my time at home walking around the neighborhood and I grew to greatly appreciate my local natural environment during this period of isolation.
+        <h2 class="mb-5">Nature Photography: Quarantine Summer 2020</h2>
+        <p>I shot all of the images below on a Nikon D5100 during my summer in quarantine near Baltimore, Maryland. I spent a lot of my time at home walking around the neighborhood and I grew to greatly appreciate my local natural environment during this period of isolation.
         </p>
         <!-- Container for the image gallery -->
         <div class="container">
