--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <title>Sam Shatzkin's Resume</title>
 
   <!-- Favicon -->
+  <link rel="shortcut icon" type="image/x-icon" href="/img/favicons/favicon.ico">
   <link rel="apple-touch-icon" sizes="180x180" href="/img/favicons/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/img/favicons/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/img/favicons/favicon-16x16.png">
