--- a/index.html
+++ b/index.html
@@ -12,14 +12,7 @@
   <title>Sam Shatzkin's Resume</title>
 
   <!-- Favicon -->
-  <link rel="shortcut icon" type="image/x-icon" href="/img/favicons/favicon.ico?">
-  <link rel="apple-touch-icon" sizes="180x180" href="/img/favicons/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/img/favicons/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/img/favicons/favicon-16x16.png">
-  <link rel="manifest" href="/img/favicons/site.webmanifest">
-  <link rel="mask-icon" href="/img/favicons/safari-pinned-tab.svg" color="#5bbad5">
-  <meta name="msapplication-TileColor" content="#2d89ef">
-  <meta name="theme-color" content="#ffffff">
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico?">
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
