Updated course listings

--- a/index.html
+++ b/index.html
@@ -323,11 +323,13 @@
               University of Chicago - Chicago, IL</h3>
             <div class="subheading">Bachelor of Science</div>
             <div>Computer Science</div>
-            <p>GPA: 3.95</p>
             <div class="subheading mb-3">Representative Courses</div>
             <ul class="fa-ul mb-0">
               <li>
-                <i class="fa-li fa fa-laptop-code"></i> CMSC 29512 - Entrepeneurship in Technology (MS Course)
+                <i class="fa-li fa fa-laptop-code"></i> CMSC 29512 - Entrepeneurship in Technology (Masters level Course)
+              </li>
+              <li>
+                <i class="fa-li fa fa-laptop-code"></i> CMSC 23230 - Engineering Interactive Electronics onto Printed Circuit Boards
               </li>
               <li>
                 <i class="fa-li fa fa-laptop-code"></i> CMSC 21800 - Data Science for Compuer Scientists
@@ -336,16 +338,25 @@
                 <i class="fa-li fa fa-laptop-code"></i> CMSC 23900 - Data Visualization
               </li>
               <li>
+                <i class="fa-li fa fa-laptop-code"></i> CMSC 22200 - Computer Architecture
+              </li>
+              <li>
                 <i class="fa-li fa fa-laptop-code"></i> CMSC 22000 - Software Development
               </li>
               <li>
-                <i class="fa-li fa fa-dna"></i> BIOS 26120 - An Introduction to Bioinformatics and Proteomics
+                <i class="fa-li fa fa-dna"></i> ECEV 44500 - Networks in Ecology and Evolution (Masters level Course)
+              </li>
+              <li>
+                <i class="fa-li fa fa-dna"></i> BIOS 29208 - Machine Learning & Advanced Analytics for Biomedicine
+              </li>
+              <li>
+                <i class="fa-li fa fa-dna"></i> BIOS 26120 - An Introduction to Bioinformatics and Proteomics (Masters level Course)
               </li>
               <li>
                 <i class="fa-li fa fa-dna"></i> BIOS 20151 - Quantitative Modeling in Biology
               </li>
               <li>
-                <i class="fa-li fa fa-dna"></i> BIOS 20153 - Fundamentals of Ecology and Evolutionary Biology
+                <i class="fa-li fa fa-bone"></i> BIOS 20153 - Fundamentals of Ecology and Evolutionary Biology
               </li>
               <li>
                 <i class="fa-li fa fa-bone"></i> BIOS 29142 - From Fossils to Fermi's Paradox: Origin and Evolution of Intelligent Life
