Updated experience and eduation

--- a/index.html
+++ b/index.html
@@ -436,6 +436,45 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
+            <h3 class="mb-0">Arch Capital Group. Ltd. - Remote / New York, NY</h3>
+            <div class="subheading mb-3">Software Engineering Intern (Azure, Kubernetes, Docker, Python)</div>
+            <ul class="fa-ul mb-0" style="list-style-type:disc;">
+              <li>
+                Enhance the safety of customer and corporate data by designing and coordinating a transition between security infrastructure and policies in live, customer-facing cloud software
+              </li>
+              <li>
+                Facilitate internal mobility by developing a Kubernetes training curriculum for engineers from other teams and new hires, composed of written educational content and an interactive cloud application development and deployment tutorial in Confluence
+              </li>
+            </ul>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">June 2021 - Present</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Media, Arts, Data and Design Center at the University of Chicago - Chicago, IL</h3>
+            <div class="subheading mb-3">Hack Arts Lab (HAL) & Weston Game Lab (WGL) Technician</div>
+            <ul class="fa-ul mb-0" style="list-style-type:disc;">
+              <li>
+                Trained and assisted visiting students and faculty with proper usage of fabriccation machinery - laser cutters, CNC machines, vinyl cutters, 3D printers, soldering irons
+              </li>
+              <li>
+                Managed day to day operations by administering lab resources, managing visitor appointments and chekouts, and maintaining and repairing equipment
+              </li>
+              <li>
+                Improved training processes by writing machine and lab procedure turorials and administering certification exams
+              </li>
+            </ul>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">October 2019 - Present</span>
+          </div>
+        </div>
+        
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
             <h3 class="mb-0">Character Search, Paleontology Department at the UNiversity of Chicago - Chicago, IL</h3>
             <div class="subheading mb-3">Lead Developer (React JS, AWS, GitHub)</div>
             <ul class="fa-ul mb-0" style="list-style-type:disc;">
@@ -448,7 +487,7 @@
             </ul>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">June 2019 - Present</span>
+            <span class="text-primary">June 2019 - June 2021</span>
           </div>
         </div>
 
@@ -466,25 +505,7 @@
             </ul>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">June 2019 - Present</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="resume-content">
-            <h3 class="mb-0">Media, Arts, Data and Design Center at the University of Chicago - Chicago, IL</h3>
-            <div class="subheading mb-3">Hack Arts Lab (HAL) & Weston Game Lab (WGL) Technician</div>
-            <ul class="fa-ul mb-0" style="list-style-type:disc;">
-              <li>
-                Supervise and educate on the use of HAL’s fabrication machinery, including laser cutters, CNC machines, vinyl cutters, and high-end 3-D printers
-              </li>
-              <li>
-                Conduct in laboratory upgrade projects i.e. repairing damaged gaming consoles, installing laser cutter attachments
-              </li>
-            </ul>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">October 2019 - Present</span>
+            <span class="text-primary">June 2019 - June 2021</span>
           </div>
         </div>
 
