Updated current courses

--- a/index.html
+++ b/index.html
@@ -351,6 +351,9 @@
                 <i class="fa-li fa fa-vr-cardboard"></i> CMSC 20300 - Intro to Human-Computer Interaction (Currently Enrolled)
               </li>
               <li>
+                <i class="fa-li fa fa-vr-cardboard"></i> MAAD 23281 - Topics in Human Robot Interaction (Currently Enrolled)
+              </li>
+              <li>
                 <i class="fa-li fa fa-vr-cardboard"></i> MAAD 24920 - Virtual Reality Production
               </li>
               <li>
@@ -368,9 +371,7 @@
               <li>
                 <i class="fa-li fa fa-chart-bar"></i> CMSC 23900 - Data Visualization
               </li>
-              <li>
-                <i class="fa-li fa fa-calculator"></i> CMSC 25300 - Mathematical Foundations of Machine Learning (Currently Enrolled)
-              </li>
+              
               <li>
                 <i class="fa-li fa fa-calculator"></i> CMSC 27200 - Theory of Algorithms
               </li> 
