Added profile images for Arch and HCI Lab

--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
                 <i class="fa-li fa fa-calculator"></i> CMSC 27200 - Theory of Algorithms
               </li> 
               <li>
-                <i class="fa-li fa fa-dna"></i> ECEV 44500 - Networks in Ecology and Evolution <b>* Master's Level</b>
+                <i class="fa-li fa fa-dna"></i> ECEV 44500 - Networks in Ecology and Evolution <b>* Graduate Level</b>
               </li>
               <li>
                 <i class="fa-li fa fa-dna"></i> BIOS 29208 - Machine Learning & Advanced Analytics for Biomedicine
@@ -378,7 +378,29 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Arch Capital Group. Ltd. - Remote / New York, NY</h3>
+            <h3 class="mb-0">
+              <img src="img\Experience Icons\hci_lab.jpg" class="icon_photo"> &nbsp
+              Human Computer Intigration Lab - Chicago, IL
+            </h3>
+            <div class="subheading mb-3">Undergrad Research Assistant (Unity, HTC Vive, Arduino)</div>
+            <ul class="fa-ul mb-0" style="list-style-type:disc;">
+              <li>
+                Design immersive VR applications which interface with experimental haptic devices 
+              </li>
+            </ul>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">November 2021 - Present</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">
+              <img src="img\Experience Icons\arch.jfif" class="icon_photo"> &nbsp
+              Arch Capital Group. Ltd. - Remote / New York, NY
+              
+            </h3>
             <div class="subheading mb-3">Software Engineering Intern (Azure, Kubernetes, Docker, Python)</div>
             <ul class="fa-ul mb-0" style="list-style-type:disc;">
               <li>
@@ -411,7 +433,7 @@
             </ul>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">October 2019 - Present</span>
+            <span class="text-primary">October 2019 - October 2021</span>
           </div>
         </div>
         
